--- a/Advanced WTF Forms Day 63/templates/add.html
+++ b/Advanced WTF Forms Day 63/templates/add.html
@@ -6,15 +6,17 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8">
-
-      <h1>Add a new cafe into the database</h1>
+   {% from 'bootstrap5%/form.html' import render_form%}
+      {%block title%}Add a new cafe into the database{% endblock %}
 
       <!-- This is where your WTForm will go -->
+
+
+      {{render_form(form)}}
 
 	  <p class="space-above"><a href="#">See all cafes</a></p>
 
     </div>
   </div>
 </div>
-
 {% endblock %}
